--- a/index.html
+++ b/index.html
@@ -1,62 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Our Love Story 💖</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>What I Like About You</title>
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
 </head>
 <body>
-
-  <div class="hearts"></div>
-
-  <div class="landing">
-    <h1>Our Love Story</h1>
-    <h2>John ❤️ Priya</h2>
-    <p>Since Feb 14, 2022</p>
-  </div>
-
-  <section class="timeline">
-    <h2>📅 Our Journey</h2>
-    <ul>
-      <li><strong>Feb 14, 2022</strong> – First Date at Starbucks ☕</li>
-      <li><strong>Mar 10, 2022</strong> – Our First Movie 🎬</li>
-      <li><strong>May 1, 2022</strong> – Trip to Goa 🌊</li>
-      <li><strong>Aug 20, 2022</strong> – 6 Month Anniversary 🎉</li>
-    </ul>
-  </section>
-
-  <section class="gallery">
-    <h2>📸 Our Memories</h2>
-    <div class="photos">
-      <img src="images/photo1.jpg" alt="Photo 1">
-      <img src="images/photo2.jpg" alt="Photo 2">
-    </div>
-  </section>
-
-  <section class="reasons">
-    <h2>💗 Why I Love You</h2>
-    <ul>
-      <li>Your smile brightens my world 😊</li>
-      <li>You always support me 🌟</li>
-      <li>You're my favorite person to laugh with 🤭</li>
-    </ul>
-  </section>
-
-  <section class="love-letter">
-    <h2>💌 A Letter for You</h2>
-    <p>
-      Dear Priya,<br>
-      Every moment with you is a treasure. You make life sweeter, brighter, and so much more meaningful. I can’t wait to create many more memories with you.<br><br>
-      Yours forever,<br>
-      John 💖
-    </p>
-  </section>
-
   <audio autoplay loop>
-    <source src="music/love-theme.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
+    <source src="music/romantic.mp3" type="audio/mpeg" />
   </audio>
 
-  <script src="script.js"></script>
+  <div class="container">
+    <img src="images/her-photo.jpg" alt="Her Photo" class="hero-photo" />
+    <h1>What I Like About You ❤️</h1>
+
+    <div class="love-notes">
+      <p>💫 Your smile lights up every room.</p>
+      <p>💬 Your laugh is my favorite melody.</p>
+      <p>🌸 Your kindness makes the world softer.</p>
+      <p>🌙 You believe in me when I don’t believe in myself.</p>
+      <p>🪐 You’re my calm in the chaos.</p>
+      <p>🍰 You’re sweeter than dessert and warmer than sunshine.</p>
+      <p>🫶 I Like how you love — genuinely, deeply, beautifully.</p>
+      <p>💌 Being with you is my favorite chapter.</p>
+    </div>
+
+    <h2>Forever yours,</h2>
+    <p class="signature">— [Junior]</p>
+  </div>
 </body>
 </html>
