--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
   <audio autoplay loop>
-    <source src="music/romantic.mp3" type="audio/mpeg" />
+    <source src="music/HIT 3 - Prema Velluva BGM.mp3" type="audio/mpeg" />
   </audio>
 
   <div class="container">
-    <img src="images/her-photo.jpg" alt="Her Photo" class="hero-photo" />
+    <img src="images/WhatsApp Image 2025-07-13 at 11.20.46 AM.jpeg" alt="Her Photo" class="hero-photo" />
     <h1>What I Like About You ❤️</h1>
 
     <div class="love-notes">
