--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
   <audio autoplay loop>
-    <source src="music/HIT 3 - Prema Velluva BGM.mp3" type="audio/mpeg" />
+    <source src="<source src="music/HIT%203%20-%20Prema%20Velluva%20BGM.mp3" type="audio/mpeg" />
+" type="audio/mpeg" />
   </audio>
 
   <div class="container">
-    <img src="images/WhatsApp Image 2025-07-13 at 11.20.46 AM.jpeg" alt="Her Photo" class="hero-photo" />
+    <img src="<img src="images/WhatsApp%20Image%202025-07-13%20at%2011.20.46%20AM.jpeg" alt="Her Photo" class="hero-photo" />
+" alt="Her Photo" class="hero-photo" />
     <h1>What I Like About You ❤️</h1>
 
     <div class="love-notes">
