--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <audio autoplay loop>
-    <source src="<source src="music/HIT%203%20-%20Prema%20Velluva%20BGM.mp3" type="audio/mpeg" />
-" type="audio/mpeg" />
-  </audio>
+<audio autoplay loop>
+  <source src="music/HIT%203%20-%20Prema%20Velluva%20BGM.mp3" type="audio/mpeg" />
+  Your browser does not support the audio element.
+</audio>
 
-  <div class="container">
-    <img src="<img src="images/WhatsApp%20Image%202025-07-13%20at%2011.20.46%20AM.jpeg" alt="Her Photo" class="hero-photo" />
-" alt="Her Photo" class="hero-photo" />
-    <h1>What I Like About You ❤️</h1>
+<!-- Container -->
+<div class="container">
+  <img src="images/WhatsApp%20Image%202025-07-13%20at%2011.20.46%20AM.jpeg" alt="Her Photo" class="hero-photo" />
+  <h1>What I Like About You ❤️</h1>
+</div>
 
     <div class="love-notes">
       <p>💫 Your smile lights up every room.</p>
