--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
       }
     });
   </script>
+<!-- Floating Hearts -->
+<script>
+  function createHeart() {
+    const heart = document.createElement('div');
+    heart.classList.add('heart');
+    heart.style.left = Math.random() * 100 + 'vw';
+    heart.style.animationDuration = 5 + Math.random() * 5 + 's';
+    document.body.appendChild(heart);
+    setTimeout(() => heart.remove(), 10000);
+  }
+  setInterval(createHeart, 300);
+</script>
 
 </body>
 </html>
