--- a/index.html
+++ b/index.html
@@ -8,21 +8,22 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+  <!-- Floating hearts -->
+  <div class="hearts"></div>
+
   <!-- Background music -->
   <audio autoplay loop>
     <source src="music/HIT%203%20-%20Prema%20Velluva%20BGM.mp3" type="audio/mpeg" />
     Your browser does not support the audio element.
   </audio>
 
-  <!-- Floating hearts container -->
-  <div class="hearts"></div>
-
-  <!-- Main container -->
+  <!-- Main image + heading -->
   <div class="container">
     <img src="images/WhatsApp%20Image%202025-07-13%20at%2011.20.46%20AM.jpeg" alt="Her Photo" class="hero-photo" />
-    <h1>What I Like About You ❤️</h1>
+    <h1 class="fade-in">What I Like About You ❤️</h1>
   </div>
 
+  <!-- Love notes -->
   <div class="love-notes">
     <p>💫 Your smile lights up every room.</p>
     <p>💬 Your laugh is my favorite melody.</p>
@@ -30,11 +31,11 @@
     <p>🌙 You believe in me when I don’t believe in myself.</p>
     <p>🪐 You’re my calm in the chaos.</p>
     <p>🍰 You’re sweeter than dessert and warmer than sunshine.</p>
-    <p>🫶 I Like how you love — genuinely, deeply, beautifully.</p>
+    <p>🫶 I like how you love — genuinely, deeply, beautifully.</p>
     <p>💌 Being with you is my favorite chapter.</p>
   </div>
 
-  <h2>Forever yours,</h2>
+  <h2 class="fade-in">Forever yours,</h2>
   <p class="signature">— Junior</p>
 </body>
 </html>
