--- a/index.html
+++ b/index.html
@@ -11,31 +11,33 @@
   <!-- Floating hearts -->
   <div class="hearts"></div>
 
+  <!-- Music control button -->
+  <button id="music-btn" title="Toggle Music">🔊</button>
+
   <!-- Background music -->
-  <audio autoplay loop>
+  <audio id="bg-music" autoplay loop>
     <source src="music/HIT%203%20-%20Prema%20Velluva%20BGM.mp3" type="audio/mpeg" />
     Your browser does not support the audio element.
   </audio>
 
-  <!-- Main image + heading -->
+  <!-- Content -->
   <div class="container">
     <img src="images/WhatsApp%20Image%202025-07-13%20at%2011.20.46%20AM.jpeg" alt="Her Photo" class="hero-photo" />
     <h1 class="fade-in">What I Like About You ❤️</h1>
-  </div>
+    
+    <div class="love-notes">
+      <p class="note">💫 Your smile lights up every room.</p>
+      <p class="note">💬 Your laugh is my favorite melody.</p>
+      <p class="note">🌸 Your kindness makes the world softer.</p>
+      <p class="note">🌙 You believe in me when I don’t believe in myself.</p>
+      <p class="note">🪐 You’re my calm in the chaos.</p>
+      <p class="note">🍰 You’re sweeter than dessert and warmer than sunshine.</p>
+      <p class="note">🫶 I like how you love — genuinely, deeply, beautifully.</p>
+      <p class="note">💌 Being with you is my favorite chapter.</p>
+    </div>
 
-  <!-- Love notes -->
-  <div class="love-notes">
-    <p>💫 Your smile lights up every room.</p>
-    <p>💬 Your laugh is my favorite melody.</p>
-    <p>🌸 Your kindness makes the world softer.</p>
-    <p>🌙 You believe in me when I don’t believe in myself.</p>
-    <p>🪐 You’re my calm in the chaos.</p>
-    <p>🍰 You’re sweeter than dessert and warmer than sunshine.</p>
-    <p>🫶 I like how you love — genuinely, deeply, beautifully.</p>
-    <p>💌 Being with you is my favorite chapter.</p>
+    <h2 class="fade-in">Forever yours,</h2>
+    <p class="signature">— Junior</p>
   </div>
-
-  <h2 class="fade-in">Forever yours,</h2>
-  <p class="signature">— Junior</p>
 </body>
 </html>
