--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="hearts-container" id="hearts-container"></div>
 
   <div class="container">
-    <img src="your-image.png" alt="Photo" class="photo" />
+    <img src="your-image.jpeg" alt="Photo" class="photo" />
     <h1>What I Like About You ❤️</h1>
     <div id="text-list" class="text-box">
       <!-- List will appear here one by one -->
