--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="hearts-container" id="hearts-container"></div>
 
   <div class="container">
-    <img src="your-image.jpeg" alt="Photo" class="photo" />
+    <img src="images/your-image.jpeg" alt="Photo" class="photo" />
     <h1>What I Like About You ❤️</h1>
     <div id="text-list" class="text-box">
       <!-- List will appear here one by one -->
@@ -18,7 +18,7 @@
   </div>
 
   <button id="music-btn">Play Music 🎵</button>
-  <audio id="bg-music" src="your-music.mp3" loop></audio>
+  <audio id="bg-music" src="music/your-music.mp3" loop></audio>
 
   <script src="script.js"></script>
 </body>
