--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>What I Like About You</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="hearts-container" id="hearts-container"></div>
@@ -13,7 +13,7 @@
     <img src="images/your-image.jpeg" alt="Photo" class="photo" />
     <h1>What I Like About You ❤️</h1>
     <div id="text-list" class="text-box">
-      <!-- List will appear here one by one -->
+      <!-- Text will appear here one-by-one -->
     </div>
   </div>
 
