--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <!-- Main Content Hidden Initially -->
   <div class="container" id="main-content" style="display: none;">
-   <img src="images/your-image.jpeg" alt="Photo" class="photo" id="main-photo" onload="init()" />
+   <img src="images/your-image.jpeg" alt="Photo" class="photo" id="main-photo"  />
     
 
     <h1>What I Like About You ❤️</h1>
