--- a/index.html
+++ b/index.html
@@ -2,30 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>What I Like About You ❤️</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>What I Like About You</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <!-- Background Overlay Image -->
-  <div class="background-overlay"></div>
+  <!-- Background music -->
+  <audio id="bg-music" src="music/HIT%203%20-%20Prema%20Velluva%20BGM.mp3" preload="auto"></audio>
 
-  <!-- Heart Animation Container -->
-  <div class="hearts-container" id="hearts-container"></div>
+  <!-- Floating hearts container -->
+  <div class="hearts"></div>
 
-  <!-- Main Content Hidden Initially -->
-  <div class="container" id="main-content" style="display: none;">
-   <img src="images/your-image.jpeg" alt="Photo" class="photo" id="main-photo"  />
-    
+  <!-- Main Content -->
+  <div class="container">
+    <img src="images/your-image.jpeg" alt="Her Photo" class="photo" id="main-photo" />
 
-    <h1>What I Like About You ❤️</h1>
-    <div id="text-list" class="text-box"></div>
+    <h1 class="title">What I Like About You ❤️</h1>
+
+    <div class="love-notes">
+      <p>💫 Your smile lights up every room.</p>
+      <p>💬 Your laugh is my favorite melody.</p>
+      <p>🌸 Your kindness makes the world softer.</p>
+      <p>🌙 You believe in me when I don’t believe in myself.</p>
+      <p>🪐 You’re my calm in the chaos.</p>
+      <p>🍰 You’re sweeter than dessert and warmer than sunshine.</p>
+      <p>🫶 I Like how you love — genuinely, deeply, beautifully.</p>
+      <p>💌 Being with you is my favorite chapter.</p>
+    </div>
+
+    <h2>Forever yours,</h2>
+    <p class="signature">— Junior</p>
   </div>
-
-  <!-- Background Music -->
-  <audio id="bg-music" src="music/your-music.mp3" loop></audio>
-
-  <!-- JS Logic -->
-  <script src="script.js"></script>
 </body>
 </html>
