--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- Background music -->
-  <audio id="bg-music" src="music/HIT%203%20-%20Prema%20Velluva%20BGM.mp3" preload="auto"></audio>
+  <audio id="bg-music" src="music/your-music.mp3" preload="auto"></audio>
 
   <!-- Floating hearts container -->
   <div class="hearts"></div>
