--- a/index.html
+++ b/index.html
@@ -2,37 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>What I Like About You</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="script.js" defer></script>
 </head>
 <body>
-  <!-- Background music -->
-  <audio id="bg-music" src="music/your-music.mp3" preload="auto"></audio>
 
-  <!-- Floating hearts container -->
+  <audio id="bg-music" src="music/your-music.mp3" loop preload="auto"></audio>
+
+  <div class="container">
+    <img src="images/your-image.jpeg" alt="Photo" class="photo" />
+    <div class="title-section">
+      <h1>What I Like About You ❤️</h1>
+      <button id="play-btn" class="music-btn">Play Music 🎵</button>
+    </div>
+  </div>
+
+  <div class="love-notes hidden" id="notes">
+    <p>💫 Your smile lights up every room.</p>
+    <p>💬 Your laugh is my favorite melody.</p>
+    <p>🌸 Your kindness makes the world softer.</p>
+    <p>🌙 You believe in me when I don’t believe in myself.</p>
+    <p>🪐 You’re my calm in the chaos.</p>
+    <p>🍰 You’re sweeter than dessert and warmer than sunshine.</p>
+    <p>🫶 I like how you love — genuinely, deeply, beautifully.</p>
+    <p>💌 Being with you is my favorite chapter.</p>
+  </div>
+
+  <h2 class="hidden" id="closing">Forever yours,</h2>
+  <p class="signature hidden" id="signature">— Junior</p>
+
   <div class="hearts"></div>
 
-  <!-- Main Content -->
-  <div class="container">
-    <img src="images/your-image.jpeg" alt="Her Photo" class="photo" id="main-photo" />
-
-    <h1 class="title">What I Like About You ❤️</h1>
-
-    <div class="love-notes">
-      <p>💫 Your smile lights up every room.</p>
-      <p>💬 Your laugh is my favorite melody.</p>
-      <p>🌸 Your kindness makes the world softer.</p>
-      <p>🌙 You believe in me when I don’t believe in myself.</p>
-      <p>🪐 You’re my calm in the chaos.</p>
-      <p>🍰 You’re sweeter than dessert and warmer than sunshine.</p>
-      <p>🫶 I Like how you love — genuinely, deeply, beautifully.</p>
-      <p>💌 Being with you is my favorite chapter.</p>
-    </div>
-
-    <h2>Forever yours,</h2>
-    <p class="signature">— Junior</p>
-  </div>
+  <script src="script.js"></script>
 </body>
 </html>
