--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
 
-  <audio id="bg-music" src="music/your-music.mp3" loop preload="auto"></audio>
+  <!-- Music (won't autoplay, starts on click) -->
+  <audio id="bg-music" src="music/your-music.mp3" loop></audio>
 
   <div class="container">
     <img src="images/your-image.jpeg" alt="Photo" class="photo" />
-    <div class="title-section">
-      <h1>What I Like About You ❤️</h1>
-      <button id="play-btn" class="music-btn">Play Music 🎵</button>
+    
+    <div class="title-row">
+      <h1 class="main-title">What I Like About You ❤️</h1>
+      <button id="play-btn">▶️ Play Music</button>
     </div>
   </div>
 
