--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="script.js" defer></script>
 </head>
 <body>
+
   <audio id="bg-music" loop>
     <source src="music/your-music.mp3" type="audio/mpeg" />
     Your browser does not support the audio element.
@@ -16,11 +17,12 @@
   <div class="hearts"></div>
 
   <div class="container">
-    <img src="images/your-image.jpeg" alt="Her Photo" class="hero-photo" />
     <h1>
       What I Like About You ❤️
       <button id="playBtn">▶️ Play Music</button>
     </h1>
+
+    <img src="images/your-image.jpeg" alt="Photo" class="hero-photo" />
 
     <div class="love-notes hidden" id="notes">
       <p>💫 Your smile lights up every room.</p>
@@ -33,7 +35,7 @@
       <p>💌 Being with you is my favorite chapter.</p>
     </div>
 
-    <h2 id="signature-header" class="hidden">Forever yours,</h2>
+    <h2 class="hidden" id="signature-header">Forever yours,</h2>
     <p class="signature hidden" id="signature">— Junior</p>
   </div>
 </body>
