--- a/index.html
+++ b/index.html
@@ -5,21 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>What I Like About You</title>
   <link rel="stylesheet" href="style.css"/>
-  <script src="script.js" defer></script>
 </head>
 <body>
   <!-- Background music -->
   <audio id="bg-music" src="music/your-music.mp3" preload="auto" loop></audio>
 
-  <!-- Floating hearts container -->
+  <!-- Floating hearts -->
   <div class="hearts"></div>
 
-  <!-- Play Music Button (initially shown) -->
+  <!-- Play Music Button -->
   <button id="play-btn" class="music-btn">Play Music 🎵</button>
 
-  <!-- Main Content -->
-  <div class="container" id="main-container" style="opacity: 0;">
-    <img src="images/your-image.jpeg" alt="Her Photo" class="photo" id="main-photo"/>
+  <!-- Main Container -->
+  <div class="container" id="main-container">
+    <img src="images/your-image.jpeg" alt="Her Photo" class="photo"/>
 
     <h1 class="title">What I Like About You ❤️</h1>
 
@@ -35,9 +34,9 @@
     </div>
 
     <h2>Forever yours,</h2>
-    <div style="text-align:center">
-      <p class="signature">— Junior</p>
-    </div>
+    <p class="signature">— Junior</p>
   </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
