--- a/index.html
+++ b/index.html
@@ -2,23 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>What I Like About You</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
 </head>
 <body>
   <!-- Background music -->
   <audio id="bg-music" src="music/your-music.mp3" preload="auto" loop></audio>
 
-  <!-- Floating hearts -->
+
+  <!-- Floating hearts container -->
   <div class="hearts"></div>
 
-  <!-- Play Music Button -->
-  <button id="play-btn" class="music-btn">Play Music 🎵</button>
-
-  <!-- Main Container -->
-  <div class="container" id="main-container">
-    <img src="images/your-image.jpeg" alt="Her Photo" class="photo"/>
+  <!-- Main Content -->
+  <div class="container">
+    <img src="images/your-image.jpeg" alt="Her Photo" class="photo" id="main-photo" />
 
     <h1 class="title">What I Like About You ❤️</h1>
 
@@ -36,7 +35,5 @@
     <h2>Forever yours,</h2>
     <p class="signature">— Junior</p>
   </div>
-
-  <script src="script.js"></script>
 </body>
 </html>
