--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
     </div>
 
     <h2>Forever yours,</h2>
-    <p class="signature">— Junior</p>
+   <div style="text-align:center">
+  <p class="signature">— Junior</p>
+</div>
+
   </div>
 </body>
 </html>
