--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
   <!-- Background music -->
-  <audio id="bg-music" src="music/your-music.mp3" preload="auto" loop></audio>
-
+  <audio id="bg-music" src="music/your-music.mp3" preload="auto"></audio>
 
   <!-- Floating hearts container -->
   <div class="hearts"></div>
@@ -33,10 +32,7 @@
     </div>
 
     <h2>Forever yours,</h2>
-   <div style="text-align:center">
-  <p class="signature">— Junior</p>
-</div>
-
+    <p class="signature">— Junior</p>
   </div>
 </body>
 </html>
