--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <!-- Background music -->
-  <audio id="bg-music" src="music/your-music.mp3" preload="auto"></audio>
+  <audio id="bg-music" src="music/your-music.mp3" preload="auto" loop></audio>
 
   <!-- Floating hearts container -->
   <div class="hearts"></div>
@@ -32,7 +32,7 @@
     </div>
 
     <h2>Forever yours,</h2>
-    <p class="signature">— Junior</p>
+    <p class="signature">                  — Junior</p>
   </div>
 </body>
 </html>
